2013-02-08  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-24
       
       * Decoupled Preferences from WikiContext, effectively meaning that the following methods are 
         now deprecated
          -> WikiContext#getBundle( String ) in favour of Preferences#getBundle( WikiContext, String )
          -> WikiContext#getLocale( WikiContext ) in favour of Preferences#getLocale( WikiContext )
          -> WikiContext#hasAccess( HttpServletResponse ) in favour of 
             AuthorizationManager#hasAccess( HttpServletResponse )
          -> WikiContext#hasAccess( HttpServletResponse, boolean ) in favour of 
             AuthorizationManager#hasAccess( HttpServletResponse, boolean )
             
       * Added latest pom.xml from JSPWIKI-651 - Convert JSPWiki to a Maven project. Check associated
         JIRA for details

2013-01-28  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-23
       
       * Dutch localization updates in follow up on JSPWIKI-143 and JSPWIKI-150

2013-01-28  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-22
       
       * JSPWIKI-143: Unlocalized messages in user management
       
       * JSPWIKI-150: Unlocalized content at workflow's notification for creating a new user
       
       * Minor refactor to HsqlDbUtils init checks
       
       * deprecated 
          -> JSPWikiMarkupParser.getImagePatterns( WikiEngine ) in favour of 
             WikiEngine.getAllInlinedImagePatterns()
          -> UserManager.SaveUserProfileTask( WikiEngine ) in favour of 
             UserManager.SaveUserProfileTask( WikiEngine, Locale )

2013-01-27  Dirk Frederickx (brushed AT apache DOT org)

       * 2.9.1-svn-21
       
       * JSPWIKI-712, fixing entities encoding in change-note, author and link fields. 
         Part 2 : more fixes when adding page comments. (as pointed out by Harry)
         
       * Improved styling of form buttons, fixing presentation issues in Chrome.       
